--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "antd": "^5.20.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-i18next": "^15.0.1",
     "react-intersection-observer": "^9.13.0",
     "react-marquee-slider": "^1.1.5",
     "react-redux": "^9.1.2",
